# drufflebag

./: .gitignore  LICENSE  README.md  about.html  index.html  no-emulator.html  package-lock.json  package.json  quickstart.html  ruffle.html  settings.html  vite.config.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  structs.rs
src-tauri/src/commands/: c_app.rs  c_cache.rs  c_page.rs  c_path.rs  c_swf.rs
src-tauri/src/data/: migrations.rs
src-tauri/src/events/: evt_emulation.rs  evt_play_button.rs  evt_swf.rs
src-tauri/src/pages/: open.rs
src-tauri/src/utils/: cache.rs  hash.rs  path.rs  swf.rs
src/assets/: .notice
src/components/: App.jsx  Emulator.jsx  collapse.jsx  contextMenu.jsx  header.jsx  iconButton.jsx  noItemsBox.jsx  swfTable.jsx  topBar.jsx
src/hooks/: useContextMenu.js
src/locales/: en-ca.json  index.js
src/models/: status.js  swf.js  type.js
src/pages/: main.jsx  ruffle.jsx
src/pages/about/: AboutContent.jsx  about.jsx
src/pages/emulator/: EmulationContent.jsx  emulation.jsx
src/pages/main/: MainContent.jsx  main.jsx
src/pages/no-emulator/: NoEmulatorContent.jsx  noEmulator.jsx
src/pages/quickstart/: QuickstartContent.jsx  quickstart.jsx
src/pages/settings/: SettingsContent.jsx  (+1 more)
src/styles/: About.css  App.css  Emulation.css  Settings.css  index.js
src/utils/: assets.js  broadcast.js  bytes.js  database.js  date.js  events.js  invoker.js  localStorageKeys.js  player.js  settings.js  storage.js  swf.js
(+13 files in other folders)
